sandbox/output
TicketDispenserTest.java:53: error: incompatible types: MockTurnNumberSequence cannot be converted to TurnNumberSequence
        TicketDispenser dispenser = new TicketDispenser(mockTurnNumberSequence);
                                                        ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
